Fix coffee game on mobile

--- a/components/BackgroundImage/Coffee/styles.module.scss
+++ b/components/BackgroundImage/Coffee/styles.module.scss
@@ -3,6 +3,10 @@
   grid-template-columns: 3fr 5fr;
   width: 100%;
   height: 100%;
+  @media (max-width: 768px) {
+    overflow: auto;
+    grid-template-columns: 1fr;
+  }
 }
 
 .gameInfo {
@@ -26,6 +30,9 @@
   width: 100%;
   height: 100%;
   display: flex;
+  @media (max-width: 768px) {
+   overflow: unset
+  }
 }
 
 .endGameContainer {
